Start of an EditBook page; a few other fixes.

--- a/books/Add.storyboard
+++ b/books/Add.storyboard
@@ -1,109 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="pS6-3L-WFP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
-    <scenes>
-        <!--Search Results View Controller-->
-        <scene sceneID="IMM-IK-owI">
-            <objects>
-                <viewController modalTransitionStyle="flipHorizontal" id="Lqd-C4-BX8" customClass="SearchResultsViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="QXZ-cP-i3P"/>
-                        <viewControllerLayoutGuide type="bottom" id="va4-VN-7cD"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="eaS-Su-O3Q">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching for Books" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1kn-uv-tVc">
-                                <rect key="frame" x="20" y="252.5" width="560" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="3gJ-ah-QZ0">
-                                <rect key="frame" x="281" y="281" width="37" height="37"/>
-                                <color key="color" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </activityIndicatorView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="3gJ-ah-QZ0" firstAttribute="centerX" secondItem="eaS-Su-O3Q" secondAttribute="centerX" id="5U3-gp-xEA"/>
-                            <constraint firstItem="3gJ-ah-QZ0" firstAttribute="top" secondItem="1kn-uv-tVc" secondAttribute="bottom" constant="8" id="9rm-31-B64"/>
-                            <constraint firstItem="1kn-uv-tVc" firstAttribute="leading" secondItem="eaS-Su-O3Q" secondAttribute="leadingMargin" id="KfI-gu-GD5"/>
-                            <constraint firstItem="3gJ-ah-QZ0" firstAttribute="centerY" secondItem="eaS-Su-O3Q" secondAttribute="centerY" id="N4o-Ge-euA"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="1kn-uv-tVc" secondAttribute="trailing" id="g5D-Om-zze"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="PZP-i4-6Qx"/>
-                    <connections>
-                        <outlet property="spinner" destination="3gJ-ah-QZ0" id="Yh8-XA-O4O"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AUJ-XT-hYj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1228" y="213"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="d44-Iz-L7K">
-            <objects>
-                <navigationController id="pS6-3L-WFP" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OVV-1g-12l">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="RLM-Yq-lvb" kind="relationship" relationship="rootViewController" id="ucA-7D-k5O"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RGc-lT-uPD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-298" y="-31"/>
-        </scene>
-        <!--Scan Barcode-->
-        <scene sceneID="0aL-A1-3Fw">
-            <objects>
-                <viewController id="RLM-Yq-lvb" customClass="ScannerViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="rvV-r1-sax"/>
-                        <viewControllerLayoutGuide type="bottom" id="cJV-NH-d0g"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="87c-JQ-BID">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fRc-A1-jhP">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="fRc-A1-jhP" firstAttribute="leading" secondItem="87c-JQ-BID" secondAttribute="leading" id="829-Hx-bQE"/>
-                            <constraint firstItem="cJV-NH-d0g" firstAttribute="top" secondItem="fRc-A1-jhP" secondAttribute="bottom" id="fhr-bY-C0Y"/>
-                            <constraint firstItem="fRc-A1-jhP" firstAttribute="top" secondItem="rvV-r1-sax" secondAttribute="bottom" id="jHo-PH-Aw6"/>
-                            <constraint firstAttribute="trailing" secondItem="fRc-A1-jhP" secondAttribute="trailing" id="tPp-PO-767"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="EOd-Tk-otY"/>
-                    <navigationItem key="navigationItem" title="Scan Barcode" id="yDi-Z7-Ie2">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="3fF-kh-qUy">
-                            <connections>
-                                <action selector="cancelWasPressed:" destination="RLM-Yq-lvb" id="Uit-Gj-Jz3"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Enter Manually" id="qQ6-xc-lqo"/>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="cameraPreviewPlaceholder" destination="fRc-A1-jhP" id="ioU-1Z-7QZ"/>
-                        <segue destination="Lqd-C4-BX8" kind="show" identifier="isbnDetectedSegue" id="h61-0h-Zcg"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7MC-gC-qUv" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="421" y="-31"/>
-        </scene>
-    </scenes>
+    <scenes/>
 </document>
